# Sentry-USB-Rusty

./: BUILD.md  Cargo.toml  LICENSE  NOTICE  README.md  build-image.sh  build.sh  install-pi.sh
.cargo/: config.toml
.github/workflows/: build.yml  wiki-sync.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  away_mode.rs  ble.rs  ble_debug.rs  clips.rs  cloud.rs  drives_handler.rs  files.rs  healthcheck.rs  lib.rs  lock_chime.rs  router.rs  setup.rs  status.rs  system.rs  terminal.rs  update.rs
crates/cloud_crypto/: Cargo.toml
crates/cloud_crypto/src/: aad.rs  aead.rs  blob.rs  credentials.rs  errors.rs  ids.rs  kdf.rs  lib.rs  x25519.rs
crates/cloud_crypto/tests/: byte_vectors.rs
crates/cloud_uploader/src/: client.rs  credentials_store.rs  db_ext.rs  encrypt.rs  lib.rs  pairing.rs  rekey.rs  state.rs  uploader.rs
crates/config/: Cargo.toml
crates/drives/: Cargo.toml
crates/drives/src/: aggregate_telemetry.rs  db.rs  extract.rs  grouper.rs  lib.rs  schema.rs  types.rs
crates/notify/: Cargo.toml
crates/notify/src/: lib.rs  sentry_connect.rs
crates/sentryusb/: Cargo.toml
crates/sentryusb/src/: embed.rs  main.rs  migrate.rs
crates/setup/: Cargo.toml
crates/setup/src/: archive.rs  cttseraser_mount.rs  env.rs  lib.rs  partition.rs  runner.rs  system.rs  verify.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/tesla_ble/: Cargo.toml  build.rs
crates/tesla_ble/examples/: body_controller.rs  persistent_session.rs  scan.rs  session_info.rs  typed_query.rs
crates/tesla_ble/src/: auth.rs  body_controller.rs  gatt.rs  keys.rs  lib.rs  local_name.rs  manager.rs  responses.rs  scan.rs  session.rs  transport.rs
crates/tesla_telemetry/: Cargo.toml
crates/tesla_telemetry/src/: clock_sync.rs  config.rs  db.rs  lock.rs  main.rs  sample.rs  sample_ble.rs  usb_watch.rs
crates/usb_gadget/: Cargo.toml
crates/usb_gadget/src/: lib.rs
pi-gen-sources/00-sentryusb-tweaks/: 00-packages  00-run.sh
pi-gen-sources/00-sentryusb-tweaks/files/: sentryusb-pick-binary  sentryusb.conf.sample
run/: archiveloop  awake_start  awake_stop  enable_gadget.sh  post-archive-process.sh  temperature_monitor
run/nfs_archive/: copy-music.sh
server/ble/: sentryusb-ble.py  sentryusb-ble.service  sentryusb-telemetry.service
setup/pi/: create-backingfiles-partition.sh  setup-sentryusb  verify-configuration.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: drives.ts
web/src/components/: CloudPairingSection.tsx
web/src/components/dashboard/: CarStatusCard.tsx  TirePressureCard.tsx
web/src/components/drives/: DatePopover.tsx  DriveChart.tsx  DriveMap.tsx  DriveScrubber.tsx  DrivesActionsBar.tsx  DrivesSummaryStrip.tsx  DrivesToolbar.tsx  FilterPopover.tsx  TagPopover.tsx  TemperatureChart.tsx
web/src/components/layout/: AppShell.tsx
web/src/components/settings/: ActionsRail.tsx
web/src/components/settings/sections/: BleEnableToggle.tsx  BlePairButton.tsx  HealthCheckModal.tsx  UpdateSection.tsx
web/src/components/setup/: SetupWizard.tsx
web/src/components/setup/steps/: KeepAwakeStep.tsx  NotificationsStep.tsx  WelcomeStep.tsx
web/src/components/ui/: Banner.tsx
web/src/hooks/: useCommunityPrefs.ts  useDriveDetail.ts  useDrivesList.ts
web/src/lib/: api.ts  drive-format.ts
web/src/pages/: CommunityWraps.tsx  Dashboard.tsx  DriveDetail.tsx  Drives.tsx  Files.tsx  LockChime.tsx  Settings.tsx  Support.tsx  Viewer.tsx
web/src/pages/settings/: AboutTab.tsx  DeviceTab.tsx  NetworkTab.tsx
wiki/: Getting-Started.md  Home.md
