[package]
name = "sentryusb-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
ring = "0.17"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
portable-pty = "0.8"
crc32fast = "1"
hex = "0.4"
futures-util = "0.3"
regex = "1"
libc = "0.2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
# Direct SQLite access for the few API handlers that query
# telemetry_samples (temperature_series, tire_history). The drives
# crate already brings this transitively; declaring it here is just
# so we can reference `rusqlite::params!` directly.
rusqlite = { version = "0.32", features = ["bundled", "chrono", "blob"] }

sentryusb-config = { path = "../config", package = "sentryusb-config" }
sentryusb-shell = { path = "../shell", package = "sentryusb-shell" }
sentryusb-ws = { path = "../ws", package = "sentryusb-ws" }
sentryusb-drives = { path = "../drives", package = "sentryusb-drives" }
sentryusb-notify = { path = "../notify", package = "sentryusb-notify" }
sentryusb-setup = { path = "../setup", package = "sentryusb-setup" }
sentryusb-gadget = { path = "../usb_gadget", package = "sentryusb-gadget" }
sentryusb-cloud-uploader = { path = "../cloud_uploader", package = "sentryusb-cloud-uploader" }

[dev-dependencies]
tempfile = "3"
# Only used by tests to read archives back and validate the hand-rolled writer.
zip = { version = "2", default-features = false, features = ["deflate"] }
