[package]
name = "sentryusb-cloud-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

ring = "0.17"

# ring::agreement does not expose long-term private keys; a small dalek dep is the trade.
x25519-dalek = { version = "2", features = ["static_secrets"] }

base64 = "0.22"
hex = "0.4"

[dev-dependencies]
serde_json = { workspace = true }
