[package]
name = "sentryusb-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
ring = "0.17"
hex = "0.4"
urlencoding = "2"

chrono = { workspace = true }

sentryusb-config = { path = "../config", package = "sentryusb-config" }
