[package]
name = "sentryusb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["compression-full", "fs"] }
# Files stored uncompressed so file.data is a Cow::Borrowed slice into
# .rodata — zero allocation, zero CPU per request. The bulk of bytes
# (JS/CSS/HTML) ship as pre-compressed .br/.gz siblings produced by
# build.sh / the GitHub Actions workflow; only the few uncompressible
# files (woff2, favicon, tiny entries) live raw.
rust-embed = { version = "8" }

sentryusb-shell = { path = "../shell", package = "sentryusb-shell" }
sentryusb-ws = { path = "../ws", package = "sentryusb-ws" }
sentryusb-drives = { path = "../drives", package = "sentryusb-drives" }
sentryusb-api = { path = "../api", package = "sentryusb-api" }
sentryusb-gadget = { path = "../usb_gadget", package = "sentryusb-gadget" }
sentryusb-cloud-uploader = { path = "../cloud_uploader", package = "sentryusb-cloud-uploader" }
