[package]
name = "sentryusb-setup"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

sentryusb-config = { path = "../config", package = "sentryusb-config" }
sentryusb-shell = { path = "../shell", package = "sentryusb-shell" }
sentryusb-gadget = { path = "../usb_gadget", package = "sentryusb-gadget" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
