[package]
name = "sentryusb-tesla-ble"
version = "0.1.0"
edition = "2024"

# Bluez-aware Tesla BLE client. Coexists with bluez-based GATT servers
# on the same radio, unlike raw-HCI clients which require bluez offline.

[lib]
name = "sentryusb_tesla_ble"
path = "src/lib.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[[example]]
name = "body_controller"
path = "examples/body_controller.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

btleplug = "0.11"
futures = "0.3"
prost = "0.13"
sha1 = "0.10"
hex = "0.4"
uuid = "1"
rand = "0.8"

[build-dependencies]
prost-build = "0.13"
# Vendored protoc so users don't need to apt install protobuf-compiler.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
