[package]
name = "sentryusb-tesla-ble"
version = "0.1.0"
edition = "2024"

# Bluez-aware Tesla BLE client. Coexists with bluez-based GATT servers
# on the same radio, unlike raw-HCI clients which require bluez offline.

[lib]
name = "sentryusb_tesla_ble"
path = "src/lib.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[[example]]
name = "body_controller"
path = "examples/body_controller.rs"

[[example]]
name = "session_info"
path = "examples/session_info.rs"

[[example]]
name = "derive_key"
path = "examples/derive_key.rs"

[[example]]
name = "signed_request"
path = "examples/signed_request.rs"

[[example]]
name = "persistent_session"
path = "examples/persistent_session.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

btleplug = "0.11"
futures = "0.3"
prost = "0.13"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = "1"
rand = "0.8"

# NIST P-256 ECDH for the session handshake.
# `pem` reads the on-disk private key file Tesla pairing produced.
p256 = { version = "0.13", features = ["ecdh", "pem", "pkcs8"] }
pem = "3"

# AES-128-GCM for signed-command authentication.
aes-gcm = "0.10"

[build-dependencies]
prost-build = "0.13"
# Vendored protoc so users don't need to apt install protobuf-compiler.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
