[package]
name = "sentryusb-tesla-telemetry"
version = "0.1.0"
edition = "2024"

# BLE telemetry sampler daemon.
#
# Runs as a long-lived systemd service. While the car is awake (clip
# writes detected on the gadget LUN), polls `tesla-control state
# climate` and `state charge` every 15 s and inserts rows into the
# `telemetry_samples` table. While the car is asleep, falls back to
# `body-controller-state` every 15 min (doesn't wake the car).
#
# Coordinates BLE radio access with the iOS-app GATT daemon
# (sentryusb-ble.service) and the keep-awake nudge loop via a shared
# `/tmp/ble_radio_owner` lock file.

[[bin]]
name = "sentryusb-tesla-telemetry"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled"] }

sentryusb-config = { path = "../config", package = "sentryusb-config" }
sentryusb-shell = { path = "../shell", package = "sentryusb-shell" }
sentryusb-drives = { path = "../drives", package = "sentryusb-drives" }

[dev-dependencies]
tempfile = "3"
